[package]
authors = [
  "Alexey Pashinov <pashinov93@gmail.com>",
  "Vladimir Petrzhikovskiy <v.petrzhikovskiy@dexpa.io>",
  "Ivan Kalinin <i.kalinin@dexpa.io>",
  "Vadim Ledyaev <vl@pmobi.tech>",
]
edition = "2018"
name = "nekoton-depool"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
nekoton = {git = "https://github.com/broxus/nekoton"}
nekoton-abi = {git = "https://github.com/broxus/nekoton"}
nekoton-contracts = {git = "https://github.com/broxus/nekoton"}
nekoton-utils = {git = "https://github.com/broxus/nekoton", features = ["encryption"]}
once_cell = "1.7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
ton_abi = {git = "https://github.com/broxus/ton-labs-abi"}
ton_block = {git = "https://github.com/broxus/ton-labs-block.git"}
ton_types = {git = "https://github.com/broxus/ton-labs-types.git"}
